--- a/app/src/main/res/layout/activity_text_translation.xml
+++ b/app/src/main/res/layout/activity_text_translation.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imgBackground"
-        android:layout_width="392dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,10 +90,11 @@
         android:layout_marginStart="20dp"
         android:ems="10"
         android:hint="@string/input_hint"
-        android:inputType="textLongMessage"
+        android:inputType="text"
         android:selectAllOnFocus="true"
         android:singleLine="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imgBGInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -106,9 +107,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="translateInput"
         android:text="@string/translate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgBGInput" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="261dp"
+        android:layout_height="331dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imgBackground" />
 
 </android.support.constraint.ConstraintLayout>
