Finished Text Translation and Speech Translation

--- a/app/src/main/res/layout/activity_text_translation.xml
+++ b/app/src/main/res/layout/activity_text_translation.xml
@@ -2,37 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TextTranslation">
-
-    <ImageView
-        android:id="@+id/imgBackground"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@color/HermesBlue" />
-
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="298dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/amethysta"
-        android:text="@string/app_title"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnMenu"
@@ -40,68 +13,76 @@
         android:layout_width="72dp"
         android:layout_height="39dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="16dp"
         android:onClick="gotoSpeechTranslation"
         android:text="@string/menu"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgBGInput"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/inputLayout"
         android:layout_width="0dp"
-        android:layout_height="155dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
-        app:srcCompat="@color/HermesDarkBlue" />
-
-    <Spinner
-        android:id="@+id/spnrLangSource"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:entries="@array/spinner_source_languages"
-        android:textColor="#FFFFFF"
-        android:textSize="11sp"
-        app:layout_constraintEnd_toStartOf="@+id/imgMicSource"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
-        tools:ignore="SmallSp" />
-
-    <ImageView
-        android:id="@+id/imgMicSource"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnTranslate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgBGInput"
-        app:srcCompat="@android:drawable/ic_btn_speak_now" />
+        app:layout_constraintTop_toBottomOf="@+id/btnMenu">
 
-    <EditText
-        android:id="@+id/txtInput"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="@string/input_hint"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        android:singleLine="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/imgBGInput"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgMicSource"
-        app:layout_constraintVertical_bias="0.0" />
+        <ImageView
+            android:id="@+id/bgInput"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@color/HermesDarkBlue" />
+
+        <Spinner
+            android:id="@+id/spnrLangSrc"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:entries="@array/spinner_source_languages"
+            app:layout_constraintBottom_toBottomOf="@+id/micInput"
+            app:layout_constraintEnd_toStartOf="@+id/micInput"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/micInput" />
+
+        <ImageView
+            android:id="@+id/micInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/bgInput"
+            app:srcCompat="@android:drawable/ic_btn_speak_now" />
+
+        <EditText
+            android:id="@+id/txtInput"
+            style="@style/Widget.AppCompat.EditText"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:ems="10"
+            android:hint="@string/input_hint"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
+            android:singleLine="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="@+id/bgInput"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/micInput"
+            app:layout_constraintVertical_bias="0.0" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <Button
         android:id="@+id/btnTranslate"
@@ -111,20 +92,74 @@
         android:onClick="translateInput"
         android:text="@string/translate"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgBGInput" />
+        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/outputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTranslate">
+
+        <ImageView
+            android:id="@+id/bgOutput"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@color/HermesDarkBlue" />
+
+        <Spinner
+            android:id="@+id/spnrLangDir"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:entries="@array/spinner_direction_languages"
+            app:layout_constraintBottom_toBottomOf="@+id/micOutput"
+            app:layout_constraintEnd_toStartOf="@+id/micOutput"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/micOutput" />
+
+        <ImageView
+            android:id="@+id/micOutput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_btn_speak_now" />
+
+        <EditText
+            android:id="@+id/txtOutput"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:ems="10"
+            android:hint="Translation..."
+            android:inputType="none"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/bgOutput"
+            app:layout_constraintTop_toBottomOf="@+id/micOutput" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <ProgressBar
-        android:visibility="gone"
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="261dp"
         android:layout_height="331dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgBackground" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
