--- a/app/src/main/res/layout/activity_text_translation.xml
+++ b/app/src/main/res/layout/activity_text_translation.xml
@@ -58,6 +58,7 @@
             android:id="@+id/micInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="doSpeak"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/bgInput"
@@ -131,6 +132,7 @@
             android:id="@+id/micOutput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="doSpeak"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
