--- a/app/src/main/res/layout/activity_text_translation.xml
+++ b/app/src/main/res/layout/activity_text_translation.xml
@@ -7,30 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".TextTranslation">
 
-    <Button
-        android:id="@+id/btnMenu"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="72dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:onClick="gotoSpeechTranslation"
-        android:text="@string/menu"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/inputLayout"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnTranslate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMenu">
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <ImageView
             android:id="@+id/bgInput"
@@ -85,17 +71,15 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <Button
+    <ImageView
         android:id="@+id/btnTranslate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="92dp"
         android:onClick="translateInput"
-        android:text="@string/translate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/inputLayout"
+        app:srcCompat="@drawable/hermes_cycle" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/outputLayout"
@@ -103,7 +87,6 @@
         android:layout_height="200dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnTranslate">
@@ -155,13 +138,23 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="261dp"
-        android:layout_height="331dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="58dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:onClick="gotoSpeechTranslation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/hermes_menu" />
 
 </android.support.constraint.ConstraintLayout>
