--- a/app/src/main/res/layout/activity_speech_translation.xml
+++ b/app/src/main/res/layout/activity_speech_translation.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/speechLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SpeechTranslation">
+    android:background="@drawable/bg">
 
     <EditText
         android:id="@+id/txtInput"
